founder name change

--- a/index.html
+++ b/index.html
@@ -359,18 +359,18 @@
           <div class="col-lg-4 col-md-6 mb-4 text-center" data-aos="fade-up" data-aos-delay="100" style="margin: auto;"> 
             <div class="person">
               <div class="bio-img">
-                <figure>
+                <!-- <figure>
                   <img src="images/nayan.jpg" alt="Image" class="img-fluid">
-                </figure>
+                </figure> -->
                 <div class="social">
                   <a href="#"><span class="icon-facebook"></span></a>
                   <a href="#"><span class="icon-twitter"></span></a>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </div>
               </div>
-              <h2 class="text-black h1">Nayan Sharma</h2>
+              <h2 class="text-black h1">Nilesh Gupta</h2>
               <span class="sub-title d-block mb-3">Founder & CEO</span>
-              <p>Nayan has a mindset of building business, Nayan has good knowledge of software development life cycle. He aims to bring the revolotuion with the help of technology. </p>
+              <p>Nilesh has a mindset of building business, Nilesh has good knowledge of software development life cycle. He aims to bring the revolotuion with the help of technology. </p>
             </div>
           </div>
 
